[metadata]
name = libdrm
version = 0.0.1
author = Emanuele Panizio
author_email = emanuele.panizio@ext.ec.europa.eu
description = Common helper modules shared by the pipeline services
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/panc86/smdrm
project_urls =
    Bug Tracker = https://github.com/panc86/smdrm/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: European Union Public Licence 1.2 (EUPL 1.2)
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    pika==1.2.0

[options.packages.find]
where = src
